Fix alignment for the title

--- a/css/template.css
+++ b/css/template.css
@@ -52,13 +52,12 @@ a:hover
 	width:100%;
 	height:20px;
 	margin:0 auto;
-	text-align: center;
 /*	background:url(../images/logo.png) center no-repeat;*/
 }
 
 #logo h1
 {
-	margin: 0 auto;
+	text-align: center;
 }
 
 #cadre_texte
